--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "emotion": "^9.2.6",
     "emotion-server": "^9.2.6",
-    "gatsby": "next",
+    "gatsby": "^2.0.0-beta.105",
     "gatsby-plugin-emotion": "^1.1.17",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
