Updated gatsby and style

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "babel-plugin-styled-components": "^1.5.1",
     "emotion": "^9.2.6",
     "emotion-server": "^9.2.6",
+    "formik": "^1.0.3",
     "gatsby": "^2.0.0-beta.105",
     "gatsby-plugin-emotion": "^1.1.17",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-styled-components": "^3.0.0-beta.3",
+    "gatsby-source-prismic": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.6",
