--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "gatsby-starter-default",
   "description": "Gatsby default starter",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Antony Fenton <antonyjfenton@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.1",
     "emotion": "^9.2.6",
     "emotion-server": "^9.2.6",
     "formik": "^1.0.3",
-    "gatsby": "^2.0.0-beta.105",
+    "gatsby": "^2.0.42",
     "gatsby-plugin-emotion": "^1.1.17",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
@@ -19,6 +19,7 @@
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.6",
     "react-helmet": "^5.2.0",
+    "react-waypoint": "^8.0.3",
     "styled-components": "^3.4.2"
   },
   "keywords": [
